--- a/scripts/directives/sexo/templates/sexoTemplate.html
+++ b/scripts/directives/sexo/templates/sexoTemplate.html
@@ -1,6 +1,6 @@
       <md-radio-group ng-model="sexo">
 
-            <md-radio-button value="M" class="md-primary">H</md-radio-button>
-            <md-radio-button value="W"> M </md-radio-button>
+            <md-radio-button value="M" class="md-primary" style="display:block">Hombre</md-radio-button>
+            <md-radio-button value="W">Mujer</md-radio-button>
 
       </md-radio-group>		
