Expresión regular que acepta marcas con decimales (punto y coma)

--- a/scripts/directives/marca/templates/marcaTemplate.html
+++ b/scripts/directives/marca/templates/marcaTemplate.html
@@ -1,5 +1,5 @@
       <md-input-container class="md-block">
             <label>Marca realizada</label>
             <input name="marcaAtleta" ng-model="marca" placeholder="Marca realizada"
-                   required ng-pattern="/^[1-9]\d+[\.\,]?\d+?$/">
+                   required ng-pattern="/^[1-9]\d+([\.\,]\d+)?$/">
       </md-input-container>	
